büyük değişiklikler
